--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ h1{ margin-top:10px;}
 #header_nav{ width:100%; position:fixed;!important; top:0; z-index:1000; background:#fff;z-index:1000; padding-right:20px;}
 #carousel-example-generic{ margin-top:70px;}
 .nav-item{font-weight:bold;color:#00aeef;}
-
+.row a{text-decoration:none;}
 /*pinpai*/
 
 #pinpai{ margin:0 auto; text-align:center; margin-top:1rem;}
