--- a/css/download.css
+++ b/css/download.css
@@ -1,8 +1,9 @@
-body{min-height:700px;}
+body{min-height:700px;min-width: 1200px;}
 .fl{float:left;}
 .td-width{width:549px;}
 .w{margin:0 auto;width:980px;}
 *{margin:0;padding:0;list-style:none;}
+a{text-decoration: none;}
 /**---------------------**/
 
 .banner_top{height:210px; background:url(../img/banner_top.jpg) no-repeat top center;margin:0 auto; overflow:hidden;}
@@ -11,7 +12,7 @@ body{min-height:700px;}
 
 .banner_top ul{font: 14px "宋体", Arial, Helvetica, sans-serif;line-height: 26px;margin:60px 0 0 -50px;
     color: #756F71;}
-.banner_top li{text-shadow: 1px 1px 1px rgba(255, 255, 255, 1)}
+.banner_top ul li{text-shadow: 1px 1px 1px rgba(255, 255, 255, 1)}
 .banner_top ul .l1{
   transform:translate(100px);opacity: 0;
     animation:animations 2s ease-out forwards;}
@@ -73,7 +74,7 @@ body{min-height:700px;}
 
 
 
-.banner_top a{float:right;margin:40px 110px;width:130px;height:64px;border-radius:15px;overflow: hidden;border:#ccc 4px solid;font-size:28px;line-height:60px;text-align:center;text-decoration: none;}
+
 /**---------------------**/
 .nav_top{padding-top:60px; }
 .box{margin:0 auto;width:980px;position:relative;}
@@ -81,3 +82,12 @@ body{min-height:700px;}
 .table{width:816px;}
 .tabbale{}
 .tab-content{position:absolute;left:150px;top:50px;}
+
+/*----------------------------------------------------*/
+.topnav{position: absolute;top: 50px;right:60px;}
+.topnav a{text-decoration:none;text-shadow: 0px 0px 5px #f28e98;color:#fff;}
+.topnav li{float: left;width:80px;font-size:24px;text-align: center;}
+.topnav a span:first-child { z-index: 2; display: block; }
+.topnav a span:last-child { z-index: 1; display: block; color: #fff; font: 20px Georgia, serif; opacity: 0; -webkit-transition: -webkit-transform 0.3s, opacity 0.3s; -moz-transition: -moz-transform 0.3s, opacity 0.3s; transition: transform 0.3s, opacity 0.3s; -webkit-transform: translateY(-100%); -moz-transform: translateY(-100%); transform: translateY(-100%); text-align: center }
+.topnav a:hover span:last-child, .topnav a:focus span:last-child { opacity: 1; -webkit-transform: translateY(0%); -moz-transform: translateY(0%); transform: translateY(0%); }
+.topnav a:hover {color: #428bca;} 
