--- a/css/download.css
+++ b/css/download.css
@@ -91,3 +91,4 @@ a{text-decoration: none;}
 .topnav a span:last-child { z-index: 1; display: block; color: #fff; font: 20px Georgia, serif; opacity: 0; -webkit-transition: -webkit-transform 0.3s, opacity 0.3s; -moz-transition: -moz-transform 0.3s, opacity 0.3s; transition: transform 0.3s, opacity 0.3s; -webkit-transform: translateY(-100%); -moz-transform: translateY(-100%); transform: translateY(-100%); text-align: center }
 .topnav a:hover span:last-child, .topnav a:focus span:last-child { opacity: 1; -webkit-transform: translateY(0%); -moz-transform: translateY(0%); transform: translateY(0%); }
 .topnav a:hover {color: #428bca;} 
+.banner_top{position: relative;}
